hard-gists/c3124826a3c49ddda6999acb40ad2c27/run.log
=== Docker Run Log for c3124826a3c49ddda6999acb40ad2c27 ===
Started at: Mi 29. Okt 19:52:35 CET 2025

[2025-10-29 19:52:35] START: Running container for c3124826a3c49ddda6999acb40ad2c27
[2025-10-29 19:52:35] SUCCESS: Container d8fa1b907814777a50c71b8c1515b3ede07417331267b29d22c973d394943134 started for c3124826a3c49ddda6999acb40ad2c27
=== Container logs for c3124826a3c49ddda6999acb40ad2c27 ===
  File "/snippet.py", line 47
    print Aheight
    ^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for c3124826a3c49ddda6999acb40ad2c27 ===
[2025-10-29 19:52:37] INFO: Container d8fa1b907814777a50c71b8c1515b3ede07417331267b29d22c973d394943134 has stopped
